--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.60.5",
     "boxen": "^8.0.1",
@@ -91,7 +92,6 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
-    "supabase": "^2.24.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "task-master-ai": "^0.11.1",
@@ -131,7 +131,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.14",
+    "vite": "^5.4.19",
     "vitest": "^3.2.2"
   },
   "optionalDependencies": {
